--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </ol>
     <p> 
         Hình nền máy tính của mình:
-        <img src="hinhanh.png.lnk" />
+        <img src="https://cdn.discordapp.com/attachments/797724540896542731/890289350217199657/synth_city_background.png" />
 
     </p>
     <p>
