--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
         <title>Tài đẹp trai</title>
     </head>
     <body> <center>
-        <p> <b> Xin chào các bạn mình tên là Tài </b> </br>
+        <h1> <b> Xin chào các bạn mình tên là Tài </b> </br>
             Mình sinh ngày 10 tháng 7 năm 2004
             
-        </p>
+        </h1>
 
      </center>   
-     <p> Mạng xã hội:  </p>
+     <h2> Mạng xã hội:  </h2>
      <ol type="1">
         <li> Facebook: <a href="facebook.com/taideptraivodichvutru">Thành Tài</a> </li>
         <li> Youtube: <a href="youtube.com/channel/UCqmg5mdXzDcYyZGaCNKODvw">Taivippro123</a></li>
     </ol>
-    <p> 
+    <h2> 
         Hình nền máy tính của mình:
         <img src="https://cdn.discordapp.com/attachments/797724540896542731/890289350217199657/synth_city_background.png" />
 
-    </p>
-    <p>
+    </h2>
+    <h2>
         Đây là cái bàn phím số
-    </p>
+    </h2>
         <table border="1" cellpadding="10" cellspacing="0">
                 <td>Num</td> 
                 <td> / </td> 
@@ -52,9 +52,9 @@
             </tr>
         </table>
    
-        <p>Bài nhạc đang thích nghe</p>
+        <h2>Bài nhạc đang thích nghe</h2>
         <video controls="controls">
-            <source src="../Edit Video/long den ao ma canada.mp4" type="videp/mp4" />
+            <source src="https://www.youtube.com/watch?v=DArzZ3RvejU" type="videp/mp4" />
         </video>
         <h1>Một số biểu mẫu
             <form>
